restructure Tests update Readme