@@ -3,16 +3,15 @@ package smartcomparator;
 import org.junit.Assert;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.Test;
+import smartcomparator.dataclasses.TestStringObject;
 import smartcomparator.dataclasses.TestWrapper;
 
 import java.util.*;
 
 /**
- * Created with IntelliJ IDEA.
- * User: fabian
- * Date: 31.10.13
- * Time: 22:13
- * To change this template use File | Settings | File Templates.
+ * @author fabian
+ *         Date: 31.10.13
+ *         Time: 22:13
  */
 public class PerformanceTest {
 
@@ -60,7 +59,7 @@ public class PerformanceTest {
         Comparator<TestWrapper> nativeComparator = new Comparator<TestWrapper>() {
             @Override
             public int compare(TestWrapper o1, TestWrapper o2) {
-                return new Boolean(o1.isNativeBoolean()).compareTo(o2.isNativeBoolean());
+                return Boolean.valueOf(o1.isNativeBoolean()).compareTo(o2.isNativeBoolean());
             }
         };
 
@@ -503,7 +502,7 @@ public class PerformanceTest {
 
             before = new Date();
             Collections.sort(nativeList, nativeComparator);
-           meanStandard += new Date().getTime() - before.getTime();
+            meanStandard += new Date().getTime() - before.getTime();
 
             Assert.assertArrayEquals(scList.toArray(new TestWrapper[scList.size()]), nativeList.toArray(new TestWrapper[nativeList.size()]));
         }
@@ -546,5 +545,71 @@ public class PerformanceTest {
         }
 
         System.out.println("SmartComparator: " + (meanSc / numberOfRuns) + " NativeComparator: " + (meanStandard / numberOfRuns));
+    }
+
+    @Test
+    public void testPerformance() throws Exception {
+
+        double numberOfRuns = 1000;
+        double meanSc = 0;
+        double meanStandard = 0;
+
+        List<TestStringObject> list;
+
+        List<TestStringObject> list2 = null;
+        for (int idx = 0; idx < numberOfRuns; idx++) {
+            list = new ArrayList<>();
+
+            for (int i = 0; i < 10000; i++) {
+                list.add(new TestStringObject(UUID.randomUUID().toString(), (int) ((Math.random() * 1000) % 1000)));
+            }
+            list2 = new ArrayList<>(list);
+
+            SmartComparator sc = new SmartComparator(TestStringObject.class);
+            Date beforeSc = new Date();
+            Collections.sort(list, sc);
+            Date afterSc = new Date();
+
+            Comparator<TestStringObject> standardComparator = new Comparator<TestStringObject>() {
+                @Override
+                public int compare(TestStringObject o1, TestStringObject o2) {
+
+                    int ret = -0;
+                    if (o1 == null && o2 == null) {
+                        return ret;
+                    }
+
+                    if (o1.getVal() == null && o1.getVal() == o2.getVal()) {
+                        ret = 0;
+                    } else if (o1.getVal() != null) {
+                        ret = o1.getVal().compareTo(o2.getVal());
+                        if (ret != 0) {
+                            return ret;
+                        }
+                    } else {
+                        return -1;
+                    }
+
+                    ret = new Integer(o1.getVal2()).compareTo(o2.getVal2());
+
+                    return ret;  //To change body of implemented methods use File | Settings | File Templates.
+                }
+            };
+
+            Date beforeStandard = new Date();
+            Collections.sort(list2, standardComparator);
+            Date afterStandard = new Date();
+
+            meanSc += afterSc.getTime() - beforeSc.getTime();
+            meanStandard += afterStandard.getTime() - beforeStandard.getTime();
+            Assert.assertArrayEquals(list.toArray(new TestStringObject[list.size()]), list2.toArray(new TestStringObject[list2.size()]));
+        }
+
+        meanSc = meanSc / numberOfRuns;
+        meanStandard = meanStandard / numberOfRuns;
+
+        System.out.println("meanSc: " + meanSc + " meanStandard: " + meanStandard);
+
+
     }
 }
